界面的优化

--- a/res/layout/park_details.xml
+++ b/res/layout/park_details.xml
@@ -9,7 +9,7 @@
 		android:layout_height="wrap_content" android:drawableLeft="@drawable/ic_while_location"
 		android:text="  您当前的位置：" android:textColor="@color/white"
 		android:layout_alignParentLeft="true" android:layout_below="@+id/rlnearby"
-		android:paddingLeft="10dp" android:textSize="14sp"
+		android:paddingLeft="10dp" android:textSize="@dimen/basic_text_size"
 		android:drawablePadding="5dp" android:paddingTop="10dp"
 		android:paddingBottom="10dp" android:singleLine="true"
 		android:ellipsize="end" android:background="@color/orange" />
@@ -17,7 +17,9 @@
 
 	<RelativeLayout android:id="@+id/rlDetails"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_below="@+id/tvLocation" android:layout_marginTop="10dp">
+		android:layout_below="@+id/tvLocation" android:layout_marginTop="10dp"
+		android:background="@drawable/bg_nearby_park_item"
+		android:layout_marginLeft="12dp" android:layout_marginRight="12dp">
 
 		<View android:id="@+id/noeDot" android:layout_width="2dp"
 			android:layout_height="52dp" android:background="@drawable/park_list_line_repeat"
@@ -27,30 +29,28 @@
 			android:drawablePadding="7dp" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
 			android:drawableLeft="@drawable/ic_orange_location" android:text="人民广场"
-			android:textSize="@dimen/large_text_size" android:singleLine="true"
+			android:textSize="@dimen/basic_text_size" android:singleLine="true"
 			android:ellipsize="end" android:layout_toLeftOf="@+id/viewNavigation"
-			android:layout_marginRight="10dp" android:layout_marginLeft="10dp" />
+			android:layout_marginRight="10dp" android:layout_marginLeft="10dp" 
+			android:paddingTop="8dp" />
 
 		<TextView android:id="@+id/tvAddress" android:layout_width="wrap_content"
 			android:drawablePadding="5dp" android:layout_height="wrap_content"
 			android:layout_alignParentLeft="true" android:singleLine="true"
 			android:ellipsize="end" android:layout_toLeftOf="@+id/viewNavigation"
 			android:layout_marginRight="10dp" android:layout_below="@+id/tvLocationPark"
-			android:drawableLeft="@drawable/ic_location_dot" android:text="地址：  浦东新区动车"
-			android:layout_marginTop="6dp" android:textSize="@dimen/large_text_size"
+			android:drawableLeft="@drawable/ic_location_dot" android:text="地址：浦东新区动车"
+			android:layout_marginTop="6dp" android:textSize="@dimen/basic_text_size"
+			android:textColor="#727272"
 			android:layout_marginLeft="10dp" />
-
-
-
 
 		<TextView android:id="@+id/tvDistance" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
 			android:layout_below="@+id/tvAddress" android:drawableLeft="@drawable/ic_location_dot"
 			android:text="距离200m  空车位5个" android:layout_marginTop="4dp"
+			android:textColor="#727272"
 			android:textSize="@dimen/large_text_size" android:drawablePadding="5dp"
 			android:layout_marginLeft="10dp" />
-
-
 
 
 		<LinearLayout android:id="@+id/viewNavigation"
@@ -66,37 +66,57 @@
 		</LinearLayout>
 		<TextView android:id="@+id/line" android:layout_width="match_parent"
 			android:layout_height="1dp" android:layout_below="@+id/viewNavigation"
-			android:background="#333333" android:layout_marginTop="10dp"
+			android:background="#ebebeb" android:layout_marginTop="12dp"
 			android:layout_marginLeft="15dp" android:layout_marginRight="15dp" />
 
 		<TextView android:id="@+id/details" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:text="详情"
 			android:textSize="@dimen/large_text_size" android:layout_below="@+id/line"
-			android:layout_marginTop="10dp" android:layout_marginLeft="30dp" />
+			android:layout_marginTop="10dp" android:layout_marginLeft="30dp"
+			android:textColor="@color/dark" />
 
 
 		<TextView android:id="@+id/daytime" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:text="白天"
 			android:textSize="@dimen/large_text_size" android:layout_below="@+id/details"
-			android:layout_marginTop="10dp" android:layout_marginLeft="30dp" />
+			android:layout_marginTop="5dp" android:layout_marginLeft="30dp"
+			android:textColor="@color/orange" />
 
 		<TextView android:id="@+id/tvDayTimePrice"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
 			android:text="首小时内2.5/15分钟" android:textSize="@dimen/large_text_size"
-			android:layout_below="@+id/daytime" android:layout_marginTop="10dp"
-			android:layout_marginLeft="30dp" />
+			android:layout_below="@+id/daytime" android:layout_marginTop="5dp"
+			android:layout_marginLeft="30dp" android:textColor="#727272" />
 
 		<TextView android:id="@+id/night" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:text="晚上"
 			android:textSize="@dimen/large_text_size" android:layout_below="@+id/tvDayTimePrice"
-			android:layout_marginTop="10dp" android:layout_marginLeft="30dp" />
+			android:layout_marginTop="5dp" android:layout_marginLeft="30dp"
+			android:textColor="@color/orange" />
 
 
 		<TextView android:id="@+id/tvNightPrice"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
 			android:text="首小时内2.5/15分钟" android:textSize="@dimen/large_text_size"
-			android:layout_below="@+id/night" android:layout_marginTop="10dp"
-			android:layout_marginLeft="30dp" />
+			android:layout_below="@+id/night" android:layout_marginTop="5dp"
+			android:layout_marginLeft="30dp" android:textColor="#727272" android:layout_marginBottom="36dp"/>
 	</RelativeLayout>
 
+	<RelativeLayout android:layout_width="match_parent"
+		android:layout_height="wrap_content" android:layout_marginTop="5dp"
+		android:background="@drawable/bg_nearby_park_item"
+		android:layout_marginLeft="12dp" android:layout_marginRight="12dp"
+		android:layout_below="@+id/rlDetails">
+
+		<TextView android:id="@+id/favorable" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:text="优惠信息："
+			android:textSize="@dimen/basic_text_size" android:layout_marginTop="10dp"
+			android:layout_marginLeft="30dp" />
+
+		<TextView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:text="暂无优惠"
+			android:textSize="@dimen/basic_text_size" android:layout_below="@+id/favorable"
+			android:layout_marginTop="10dp" android:layout_marginLeft="30dp" 
+			android:layout_marginBottom="30dp" android:textColor="#727272"/>
+	</RelativeLayout>
 </RelativeLayout>
