--- a/res/layout/park_item.xml
+++ b/res/layout/park_item.xml
@@ -25,16 +25,16 @@
 		android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:singleLine="true"
 		android:ellipsize="end" android:layout_toLeftOf="@+id/viewNavigation" android:layout_marginRight="10dp"
 		android:layout_below="@+id/tvLocationPark" android:drawableLeft="@drawable/ic_location_dot"
-		android:textColor="@color/light_dark" android:layout_marginTop="10dp" android:textSize="@dimen/small_text_size"
-		android:text="地址：上海科技停车场"/>
+		android:textColor="@color/light_dark" android:layout_marginTop="10dp" android:textSize="@dimen/basic_text_size"
+		android:text=" 地址： 上海科技停车场"/>
 
 
 	<TextView android:id="@+id/tvDistance" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:layout_alignParentLeft="true"
 		android:layout_below="@+id/tvAddress" android:drawableLeft="@drawable/ic_location_dot"
 		android:textColor="@color/dark" android:layout_marginTop="8dp" 
-		android:textSize="@dimen/large_text_size" android:drawablePadding="5dp" 
-		android:text="距离1km 空车位3个"/>
+		android:textSize="@dimen/basic_text_size" android:drawablePadding="5dp" 
+		android:text=" 距离1km 空车位3个"/>
 
 
 
