--- a/res/layout/park_list.xml
+++ b/res/layout/park_list.xml
@@ -9,7 +9,7 @@
 			android:layout_height="wrap_content" android:drawableLeft="@drawable/ic_while_location"
 			android:text="  您当前的位置：" android:textColor="@color/white"
 			android:layout_alignParentLeft="true" android:layout_below="@+id/rlnearby"
-			android:paddingLeft="10dp" android:textSize="14sp" android:drawablePadding="5dp"
+			android:paddingLeft="10dp" android:textSize="@dimen/basic_text_size" android:drawablePadding="5dp"
 			android:paddingTop="10dp" android:paddingBottom="10dp" android:singleLine="true"
 			android:ellipsize="end" android:background="@color/orange"/>
 
