--- a/res/layout/more.xml
+++ b/res/layout/more.xml
@@ -5,14 +5,15 @@
 
 	<include layout="@layout/common_title_bar" />
 
+
 	<RelativeLayout android:id="@+id/aboutWe"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_marginTop="5dp">
+		android:layout_marginTop="5dp" android:background="@drawable/bg_more_btn">
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_centerVertical="true"
 			android:layout_toRightOf="@+id/ivAboutWe" android:layout_weight="2"
 			android:gravity="center" android:text="  关于我们" android:textSize="18sp"
-			android:layout_marginLeft="20dp" android:drawableLeft="@drawable/ic_search" />
+			android:layout_marginLeft="20dp" />
 
 		<ImageView android:layout_width="20dp"
 			android:layout_height="20dp" android:layout_alignParentRight="true"
@@ -23,13 +24,13 @@
 
 	<RelativeLayout android:id="@+id/contactWe"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_marginTop="5dp">
+		android:layout_marginTop="5dp" android:background="@drawable/bg_more_btn">
 
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_centerVertical="true"
 			android:layout_toRightOf="@+id/ivContent" android:layout_weight="2"
 			android:gravity="center" android:text="  联系我们" android:textSize="18sp"
-			android:layout_marginLeft="20dp" android:drawableLeft="@drawable/ic_search" />
+			android:layout_marginLeft="20dp" />
 		<ImageView android:layout_width="20dp"
 			android:layout_height="20dp" android:layout_alignParentRight="true"
 			android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
@@ -40,15 +41,14 @@
 
 	<RelativeLayout android:id="@+id/versionUpdate"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_marginTop="5dp">
+		android:layout_marginTop="5dp" android:background="@drawable/bg_more_btn">
 
 
 		<TextView android:layout_width="wrap_content"
 			android:gravity="center" android:layout_weight="2"
 			android:layout_height="wrap_content" android:layout_toRightOf="@+id/ivVersionUpdate"
 			android:text="  版本更新" android:textSize="18sp"
-			android:layout_marginLeft="20dp" android:drawableLeft="@drawable/ic_search"
-			android:layout_centerVertical="true" />
+			android:layout_marginLeft="20dp" android:layout_centerVertical="true" />
 
 		<ImageView android:layout_width="20dp"
 			android:layout_height="20dp" android:layout_alignParentRight="true"
@@ -59,14 +59,13 @@
 
 	<RelativeLayout android:id="@+id/idea"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_marginTop="5dp">
+		android:layout_marginTop="5dp" android:background="@drawable/bg_more_btn">
 
 
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
 			android:layout_alignParentTop="true" android:layout_marginLeft="20dp"
-			android:drawableLeft="@drawable/ic_search" android:gravity="center"
-			android:text="  意见反馈" android:textSize="18sp" />
+			android:gravity="center" android:text="  意见反馈" android:textSize="18sp" />
 
 		<ImageView android:layout_width="20dp"
 			android:layout_height="20dp" android:layout_alignParentRight="true"
