更多界面布局和代码编写

--- a/res/layout/contact_me.xml
+++ b/res/layout/contact_me.xml
@@ -18,18 +18,22 @@
 
 	<TextView android:id="@+id/tvPhone" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:layout_below="@+id/tvWeb"
-		android:layout_marginLeft="37dp" android:text="电话：40080012000" />
+		android:layout_marginLeft="37dp" android:text="电话：40080012000"
+		android:layout_marginTop="3dp" />
 
-	<TextView android:id="@+id/tvBusinessEmail" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:layout_below="@+id/tvPhone"
-		android:layout_marginLeft="37dp" android:text="商务合作专用邮箱：park@park.com" />
-	
+	<TextView android:id="@+id/tvBusinessEmail"
+		android:layout_width="wrap_content" android:layout_height="wrap_content"
+		android:layout_below="@+id/tvPhone" android:layout_marginLeft="37dp"
+		android:text="商务合作专用邮箱：park@park.com" android:layout_marginTop="3dp" />
+
 	<TextView android:id="@+id/tvEmail" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:layout_below="@+id/tvBusinessEmail"
-		android:layout_marginLeft="37dp" android:text="用户反馈专用邮箱：park@park.com" />
+		android:layout_marginLeft="37dp" android:text="用户反馈专用邮箱：park@park.com"
+		android:layout_marginTop="3dp" />
 
 	<TextView android:id="@+id/tvAddress" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:layout_below="@+id/tvEmail"
-		android:layout_marginLeft="37dp" android:text="地址：普通新区金牛大厦加禾607" />
+		android:layout_marginLeft="37dp" android:text="地址：普通新区金牛大厦加禾607"
+		android:layout_marginTop="3dp" />
 
 </RelativeLayout>
