--- a/res/layout/about_me.xml
+++ b/res/layout/about_me.xml
@@ -12,8 +12,11 @@
 		android:layout_marginTop="10dp" android:layout_marginLeft="15dp" />
 
 	<TextView android:id="@+id/tvContent" android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们关于我们"
-		android:textSize="14dp" android:layout_below="@+id/tvAboutMe"
-		android:layout_marginTop="10dp" android:layout_marginLeft="15dp" />
+		android:layout_height="wrap_content" android:text="@string/about"
+		android:textSize="14sp" android:layout_below="@+id/tvAboutMe"
+		android:layout_marginTop="10dp" android:layout_marginLeft="10dp"
+		android:lineSpacingExtra="2dp" android:layout_marginRight="10dp"
+		android:textColor="@color/dark" />
+	
+	
 </RelativeLayout>
