--- a/res/layout/more.xml
+++ b/res/layout/more.xml
@@ -1,74 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent" android:background="@color/bg_common">
 
 	<include layout="@layout/common_title_bar" />
 
 
-	<RelativeLayout android:id="@+id/aboutWe"
+	<RelativeLayout android:id="@+id/head"
+		android:layout_width="match_parent" android:layout_height="wrap_content">
+
+
+		<ImageView android:layout_width="match_parent"
+			android:layout_height="wrap_content" android:layout_centerVertical="true"
+			android:background="@drawable/bg_more_head" />
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
+			android:layout_centerVertical="true" android:background="@drawable/ic_more_head" />
+
+	</RelativeLayout>
+
+	<RelativeLayout android:id="@+id/rlaboutWe"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_marginTop="5dp" android:background="@drawable/bg_more_btn">
+		android:background="@drawable/bg_more_btn" android:padding="20dp">
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_centerVertical="true"
 			android:layout_toRightOf="@+id/ivAboutWe" android:layout_weight="2"
-			android:gravity="center" android:text="  关于我们" android:textSize="18sp"
+			android:gravity="center" android:text="  关于我们" android:textSize="16sp"
 			android:layout_marginLeft="20dp" />
 
-		<ImageView android:layout_width="20dp"
-			android:layout_height="20dp" android:layout_alignParentRight="true"
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_alignParentRight="true"
 			android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
 			android:layout_marginRight="10dp" />
 
 	</RelativeLayout>
 
-	<RelativeLayout android:id="@+id/contactWe"
+	<RelativeLayout android:id="@+id/rlcontactWe"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_marginTop="5dp" android:background="@drawable/bg_more_btn">
+		android:background="@drawable/bg_more_btn" android:padding="20dp">
 
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_centerVertical="true"
 			android:layout_toRightOf="@+id/ivContent" android:layout_weight="2"
-			android:gravity="center" android:text="  联系我们" android:textSize="18sp"
+			android:gravity="center" android:text="  联系我们" android:textSize="16sp"
 			android:layout_marginLeft="20dp" />
-		<ImageView android:layout_width="20dp"
-			android:layout_height="20dp" android:layout_alignParentRight="true"
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_alignParentRight="true"
 			android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
 			android:layout_marginRight="10dp" />
 
 	</RelativeLayout>
 
 
-	<RelativeLayout android:id="@+id/versionUpdate"
+	<RelativeLayout android:id="@+id/rlversionUpdate"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_marginTop="5dp" android:background="@drawable/bg_more_btn">
+		android:background="@drawable/bg_more_btn" android:padding="20dp">
 
 
 		<TextView android:layout_width="wrap_content"
 			android:gravity="center" android:layout_weight="2"
 			android:layout_height="wrap_content" android:layout_toRightOf="@+id/ivVersionUpdate"
-			android:text="  版本更新" android:textSize="18sp"
+			android:text="  版本更新" android:textSize="16sp"
 			android:layout_marginLeft="20dp" android:layout_centerVertical="true" />
 
-		<ImageView android:layout_width="20dp"
-			android:layout_height="20dp" android:layout_alignParentRight="true"
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_alignParentRight="true"
 			android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
 			android:layout_marginRight="10dp" />
 
 	</RelativeLayout>
 
-	<RelativeLayout android:id="@+id/idea"
+
+	<RelativeLayout android:id="@+id/rlIdea"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_marginTop="5dp" android:background="@drawable/bg_more_btn">
+		android:background="@drawable/bg_more_btn" android:padding="20dp">
 
 
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
 			android:layout_alignParentTop="true" android:layout_marginLeft="20dp"
-			android:gravity="center" android:text="  意见反馈" android:textSize="18sp" />
+			android:gravity="center" android:text="  意见反馈" android:textSize="16sp" />
 
-		<ImageView android:layout_width="20dp"
-			android:layout_height="20dp" android:layout_alignParentRight="true"
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_alignParentRight="true"
+			android:background="@drawable/ic_right_more"
+			android:layout_marginRight="10dp" />
+	</RelativeLayout>
+
+	<RelativeLayout android:id="@+id/rlShare"
+		android:layout_width="match_parent" android:layout_height="wrap_content"
+		android:background="@drawable/bg_more_btn" android:padding="20dp">
+
+
+		<TextView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
+			android:layout_alignParentTop="true" android:layout_marginLeft="20dp"
+			android:gravity="center" android:text="  告诉朋友" android:textSize="16sp" />
+
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_alignParentRight="true"
 			android:background="@drawable/ic_right_more"
 			android:layout_marginRight="10dp" />
 	</RelativeLayout>
