--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -30,7 +30,8 @@
 
         <!-- 去除原生的单选按钮图标 -->
         <item name="android:button">@null</item>
-        <item name="android:textSize">0dp</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:drawablePadding">2dp</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
