--- a/res/layout/more.xml
+++ b/res/layout/more.xml
@@ -6,16 +6,12 @@
 	<include layout="@layout/common_title_bar" />
 
 
-	<RelativeLayout android:id="@+id/head"
+	<RelativeLayout android:id="@+id/head" android:background="@drawable/bg_more_head"
 		android:layout_width="match_parent" android:layout_height="wrap_content">
 
-
-		<ImageView android:layout_width="match_parent"
-			android:layout_height="wrap_content" android:layout_centerVertical="true"
-			android:background="@drawable/bg_more_head" />
 		<ImageView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
-			android:layout_centerVertical="true" android:background="@drawable/ic_more_head" />
+			android:layout_centerVertical="true" android:src="@drawable/ic_more_head" />
 
 	</RelativeLayout>
 
