--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -35,6 +35,7 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">3dp</item>
         <item name="android:layout_weight">1</item>
     </style>
     <!-- viewPager点样式 -->
