更多界面的修改

--- a/res/layout/about_me.xml
+++ b/res/layout/about_me.xml
@@ -17,6 +17,10 @@
 		android:layout_marginTop="10dp" android:layout_marginLeft="10dp"
 		android:lineSpacingExtra="2dp" android:layout_marginRight="10dp"
 		android:textColor="@color/dark" />
-	
-	
+	<TextView android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true" android:text="版权@泊友慧2014"
+		android:layout_marginBottom="20dp" />
+
+
 </RelativeLayout>
