--- a/res/layout/more.xml
+++ b/res/layout/more.xml
@@ -1,102 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="match_parent"
-	android:layout_height="match_parent" android:background="@color/bg_common">
+	android:layout_height="match_parent" android:background="@color/bg_common"
+	android:id="@+id/rlmore">
 
-	<include layout="@layout/common_title_bar" />
+	<include android:id="@+id/a" layout="@layout/common_title_bar" />
+	<ScrollView android:layout_width="match_parent"
+		android:layout_height="wrap_content">
+		<LinearLayout android:layout_width="fill_parent"
+			android:layout_height="match_parent" android:orientation="vertical">
 
+			<RelativeLayout android:id="@+id/head"
+				android:background="@drawable/bg_more_head" android:layout_width="match_parent"
+				android:layout_height="wrap_content">
 
-	<RelativeLayout android:id="@+id/head" android:background="@drawable/bg_more_head"
-		android:layout_width="match_parent" android:layout_height="wrap_content">
+				<ImageView android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_centerHorizontal="true"
+					android:layout_centerVertical="true" android:src="@drawable/ic_more_head" />
 
-		<ImageView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
-			android:layout_centerVertical="true" android:src="@drawable/ic_more_head" />
+			</RelativeLayout>
+			<RelativeLayout android:id="@+id/rlaboutWe"
+				android:layout_width="match_parent" android:layout_height="wrap_content"
+				android:background="@drawable/bg_more_btn" android:padding="20dp">
+				<TextView android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:layout_centerVertical="true"
+					android:layout_toRightOf="@+id/ivAboutWe" android:layout_weight="2"
+					android:gravity="center" android:text="  关于我们" android:textSize="16sp"
+					android:layout_marginLeft="10dp" />
 
-	</RelativeLayout>
+				<ImageView android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentRight="true"
+					android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
+					android:layout_marginRight="10dp" />
 
-	<RelativeLayout android:id="@+id/rlaboutWe"
-		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:background="@drawable/bg_more_btn" android:padding="20dp">
-		<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_centerVertical="true"
-			android:layout_toRightOf="@+id/ivAboutWe" android:layout_weight="2"
-			android:gravity="center" android:text="  关于我们" android:textSize="16sp"
-			android:layout_marginLeft="20dp" />
+			</RelativeLayout>
 
-		<ImageView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignParentRight="true"
-			android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
-			android:layout_marginRight="10dp" />
+			<RelativeLayout android:id="@+id/rlcontactWe"
+				android:layout_width="match_parent" android:layout_height="wrap_content"
+				android:background="@drawable/bg_more_btn" android:padding="20dp">
 
-	</RelativeLayout>
+				<TextView android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:layout_centerVertical="true"
+					android:layout_toRightOf="@+id/ivContent" android:layout_weight="2"
+					android:gravity="center" android:text="  联系我们" android:textSize="16sp"
+					android:layout_marginLeft="10dp" />
+				<ImageView android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentRight="true"
+					android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
+					android:layout_marginRight="10dp" />
 
-	<RelativeLayout android:id="@+id/rlcontactWe"
-		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:background="@drawable/bg_more_btn" android:padding="20dp">
-
-		<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_centerVertical="true"
-			android:layout_toRightOf="@+id/ivContent" android:layout_weight="2"
-			android:gravity="center" android:text="  联系我们" android:textSize="16sp"
-			android:layout_marginLeft="20dp" />
-		<ImageView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignParentRight="true"
-			android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
-			android:layout_marginRight="10dp" />
-
-	</RelativeLayout>
-
-
-	<RelativeLayout android:id="@+id/rlversionUpdate"
-		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:background="@drawable/bg_more_btn" android:padding="20dp">
-
-
-		<TextView android:layout_width="wrap_content"
-			android:gravity="center" android:layout_weight="2"
-			android:layout_height="wrap_content" android:layout_toRightOf="@+id/ivVersionUpdate"
-			android:text="  版本更新" android:textSize="16sp"
-			android:layout_marginLeft="20dp" android:layout_centerVertical="true" />
-
-		<ImageView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignParentRight="true"
-			android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
-			android:layout_marginRight="10dp" />
-
-	</RelativeLayout>
+			</RelativeLayout>
 
 
-	<RelativeLayout android:id="@+id/rlIdea"
-		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:background="@drawable/bg_more_btn" android:padding="20dp">
+			<RelativeLayout android:id="@+id/rlversionUpdate"
+				android:layout_width="match_parent" android:layout_height="wrap_content"
+				android:background="@drawable/bg_more_btn" android:padding="20dp">
 
 
-		<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
-			android:layout_alignParentTop="true" android:layout_marginLeft="20dp"
-			android:gravity="center" android:text="  意见反馈" android:textSize="16sp" />
+				<TextView android:layout_width="wrap_content"
+					android:gravity="center" android:layout_weight="2"
+					android:layout_height="wrap_content" android:layout_toRightOf="@+id/ivVersionUpdate"
+					android:text="  版本更新" android:textSize="16sp"
+					android:layout_marginLeft="10dp" android:layout_centerVertical="true" />
 
-		<ImageView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignParentRight="true"
-			android:background="@drawable/ic_right_more"
-			android:layout_marginRight="10dp" />
-	</RelativeLayout>
+				<ImageView android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentRight="true"
+					android:layout_centerVertical="true" android:background="@drawable/ic_right_more"
+					android:layout_marginRight="10dp" />
 
-	<RelativeLayout android:id="@+id/rlShare"
-		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:background="@drawable/bg_more_btn" android:padding="20dp">
+			</RelativeLayout>
 
 
-		<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
-			android:layout_alignParentTop="true" android:layout_marginLeft="20dp"
-			android:gravity="center" android:text="  告诉朋友" android:textSize="16sp" />
+			<RelativeLayout android:id="@+id/rlIdea"
+				android:layout_width="match_parent" android:layout_height="wrap_content"
+				android:background="@drawable/bg_more_btn" android:padding="20dp">
 
-		<ImageView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignParentRight="true"
-			android:background="@drawable/ic_right_more"
-			android:layout_marginRight="10dp" />
-	</RelativeLayout>
 
+				<TextView android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentLeft="true"
+					android:layout_alignParentTop="true" android:layout_marginLeft="10dp"
+					android:gravity="center" android:text="  意见反馈" android:textSize="16sp" />
+
+				<ImageView android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentRight="true" android:background="@drawable/ic_right_more"
+					android:layout_marginRight="10dp" />
+			</RelativeLayout>
+
+			<RelativeLayout android:id="@+id/rlShare"
+				android:layout_width="match_parent" android:layout_height="wrap_content"
+				android:background="@drawable/bg_more_btn" android:padding="20dp">
+
+
+				<TextView android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentLeft="true"
+					android:layout_alignParentTop="true" android:layout_marginLeft="10dp"
+					android:gravity="center" android:text="  告诉朋友" android:textSize="16sp" />
+
+				<ImageView android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_alignParentRight="true" android:background="@drawable/ic_right_more"
+					android:layout_marginRight="10dp" />
+			</RelativeLayout>
+		</LinearLayout>
+	</ScrollView>
 </LinearLayout>
