用户反馈代码..

--- a/res/layout/fragment_foot.xml
+++ b/res/layout/fragment_foot.xml
@@ -15,7 +15,7 @@
         <RadioButton
             android:id="@+id/rb_home"
             style="@style/tab_btn_style"
-            android:drawableTop="@drawable/tab_home"
+            android:drawableTop="@drawable/tab_home_sel"
             android:text="主页"
             android:textColor="@color/white"/>
 
