--- a/res/layout/activity_search_parking.xml
+++ b/res/layout/activity_search_parking.xml
@@ -21,27 +21,29 @@
 		android:paddingTop="8dp" android:paddingLeft="8dp" android:background="@null"
 		android:textColor="@android:color/white" android:visibility="gone" />
 	<RelativeLayout android:id="@+id/llSearch"
-		android:layout_width="match_parent" android:layout_height="70dp"
+		android:layout_width="match_parent" android:layout_height="55dp"
 		android:background="@color/orange" android:layout_below="@+id/bar"
 		android:gravity="center_vertical">
-		
+
 		<TextView android:id="@+id/tvSearch" android:layout_width="match_parent"
-			android:layout_height="47dp" android:background="@drawable/bg_input_search_parking"
-			android:layout_margin="5dp" android:hint="请输入目的地" android:gravity="center_vertical"
+			android:layout_height="43dp" android:background="@drawable/bg_input_search_parkings"
+			android:layout_margin="5dp" android:hint="   请输入目的地" android:gravity="center_vertical"
 			android:layout_toLeftOf="@+id/vo_Search" />
 
-		<ImageView android:id="@+id/lvSearch" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignRight="@+id/tvSearch"
+		<ImageView android:id="@+id/lvSearch" android:layout_width="40dp"
+			android:layout_height="37dp" android:layout_alignRight="@+id/tvSearch"
 			android:layout_alignTop="@+id/tvSearch" android:src="@drawable/ic_search"
-			android:layout_marginRight="5dp" android:layout_marginTop="2dp" />
-		
-		<LinearLayout android:id="@+id/vo_Search" android:layout_width="40dp" android:visibility="gone"
-			android:layout_height="wrap_content"  android:layout_alignParentRight="true"
+			android:layout_marginRight="6dp" android:layout_marginTop="1dp"
+			 />
+
+		<LinearLayout android:id="@+id/vo_Search"
+			android:layout_width="40dp" android:visibility="gone"
+			android:layout_height="wrap_content" android:layout_alignParentRight="true"
 			android:layout_alignTop="@+id/tvSearch" android:gravity="center_horizontal">
-		    <ImageView android:layout_width="30dp" android:layout_height="47dp"
-		         android:src="@drawable/vo_search" />
+			<ImageView android:layout_width="30dp"
+				android:layout_height="47dp" android:src="@drawable/vo_search" />
 		</LinearLayout>
-		
+
 	</RelativeLayout>
 
 	<RelativeLayout android:id="@+id/llnearbyOrVoice"
