--- a/res/values/umeng_fb_strings.xml
+++ b/res/values/umeng_fb_strings.xml
@@ -17,6 +17,7 @@
     <string name="umeng_fb_notification_content_formatter_multiple_msg">收到来自停车宝的 %d 条回复。</string>
     <color name="umeng_fb_color_btn_pressed">#1495F7</color>
     <color name="umeng_fb_color_btn_normal">#333333</color>
+    <string name="umeng_fb_powered_by">Powered by</string>
     
     
 
